fix burger menu display blocl on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -136,6 +136,7 @@ header .main-menu .active {
         cursor:pointer;
         height: 25px;
         width: 50px;
+        display: block;
     }
 
     header svg path {
